--- a/Intermediate_2/templates/hello.html
+++ b/Intermediate_2/templates/hello.html
@@ -4,7 +4,7 @@
 {% if name %}
 
   <marquee><h1>Hello {{ name }}!</h1></marquee>
-  <p>Marquee ftw!</p>
+  {# <p>Marquee ftw!</p> #}
   <small>Do not try this at home!</small>
 
 {% else %}
