--- a/Intermediate_2/templates/register.html
+++ b/Intermediate_2/templates/register.html
@@ -1,7 +1,32 @@
-<form method="POST" action="/register">
-    <div>{{ form.username.label }}: {{ form.username(class="css_class") }}</div>
+<h1>Form</h1>
+{% if form_data %}
+    <h2>Thanks for submitting!</h2>
+    {% for key, value in form_data.items() %}
+        <p>{{ key }}: {{ value }}</p>
+    {% endfor %}
+{% endif %}
+
+<form method="POST" action="/">
+    <div>{{ form.username.label }}: {{ form.username() }}</div>
+    {% if form.username.errors %}
+        <ul class="errors">{% for error in form.username.errors %}<li>{{ error }}</li>{% endfor %}</ul>
+    {% endif %}
+
     <div>{{ form.email.label }}: {{ form.email() }}</div>
+    {% if form.email.errors %}
+        <ul class="errors">{% for error in form.email.errors %}<li>{{ error }}</li>{% endfor %}</ul>
+    {% endif %}
+
     <div>{{ form.password.label }}: {{ form.password() }}</div>
+    {% if form.password.errors %}
+        <ul class="errors">{% for error in form.password.errors %}<li>{{ error }}</li>{% endfor %}</ul>
+    {% endif %}
+
+    <div>{{ form.confirm.label }}: {{ form.confirm() }}</div>
+    {% if form.confirm.errors %}
+        <ul class="errors">{% for error in form.confirm.errors %}<li>{{ error }}</li>{% endfor %}</ul>
+    {% endif %}
+
     {{ form.csrf_token }}
     <button value="submit">Submit</button>
 </form>
